--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
     "image-to-base64": "^2.1.1",
+    "puppeteer": "^7.0.4",
     "twit": "^2.2.11",
     "unsplash-js": "^6.3.0"
   }
